--- a/test-output/old/JagdPantherSuit/methods-alphabetical.html
+++ b/test-output/old/JagdPantherSuit/methods-alphabetical.html
@@ -1,40 +1,56 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>JagdPantherSuit</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78ef96">  <td>15/02/11 15:35:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">createApplicant</td> 
+<tr bgcolor="78ef96">  <td>15/02/11 17:39:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">createApplicant</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/11 15:35:54</td>   <td>12335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">createApplicant</td> 
+<tr bgcolor="78ef96">  <td>15/02/11 17:39:23</td>   <td>7886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfApplicantWasCreated.createApplicant(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">createApplicant</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>15/02/11 15:36:05</td>   <td>23448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">createNewStage</td> 
+<tr bgcolor="956de9">  <td>15/02/11 17:39:31</td>   <td>15697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">createNewStage</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="9c9176">  <td>15/02/11 15:36:10</td>   <td>28335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">createNewUser</td> 
+<tr bgcolor="956de9">  <td>15/02/11 17:39:36</td>   <td>20772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfStageWasCreated.createNewStage(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">createNewStage</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="9c9176">  <td>15/02/11 15:36:15</td>   <td>33919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">createNewUser</td> 
+<tr bgcolor="9c9176">  <td>15/02/11 17:39:41</td>   <td>25505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">createNewUser</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/11 15:35:18</td>   <td>-23015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">createPeriod</td> 
+<tr bgcolor="9c9176">  <td>15/02/11 17:39:46</td>   <td>30864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfUserWasCreated.createNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">createNewUser</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/11 15:35:30</td>   <td>-11327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">createPeriod</td> 
+<tr bgcolor="aa7090">  <td>15/02/11 17:38:58</td>   <td>-17166</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">createPeriod</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="d4b5b8">  <td>15/02/11 15:35:10</td>   <td>-31577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">createProgram</td> 
+<tr bgcolor="aa7090">  <td>15/02/11 17:39:06</td>   <td>-8761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfPeriodWasCreated.createPeriod(java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">createPeriod</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="d4b5b8">  <td>15/02/11 15:35:14</td>   <td>-27038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">createProgram</td> 
+<tr bgcolor="d4b5b8">  <td>15/02/11 17:38:47</td>   <td>-28165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">createProgram</td> 
   <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/11 15:35:18</td>   <td>-23489</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfPeriodWasCreated.createProgram()[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">&gt;&gt;createProgram</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/11 15:35:41</td>   <td>-334</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfApplicantWasCreated.createProgram()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&gt;&gt;createProgram</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="d4b5b8">  <td>15/02/11 15:35:18</td>   <td>-23545</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfProgramWasCreated.deleteData()[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/02/11 15:35:41</td>   <td>-336</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfPeriodWasCreated.deleteData()[pri:0, instance:test.VerifyIfPeriodWasCreated@5b7a7f33]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="78ef96">  <td>15/02/11 15:36:05</td>   <td>23242</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfApplicantWasCreated.deleteData()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="956de9">  <td>15/02/11 15:36:10</td>   <td>28290</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfStageWasCreated.deleteData()[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="9c9176">  <td>15/02/11 15:36:20</td>   <td>39098</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfUserWasCreated.deleteData()[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">&lt;&lt;deleteData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="6481f5">  <td>15/02/11 15:35:06</td>   <td>-35195</td> <td title="&gt;&gt;StartTest.init()[pri:0, instance:test.StartTest@480d3575]">&gt;&gt;init</td> 
+<tr bgcolor="d4b5b8">  <td>15/02/11 17:38:52</td>   <td>-22857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyIfProgramWasCreated.createProgram(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">createProgram</td> 
+  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/02/11 17:38:58</td>   <td>-17593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfPeriodWasCreated.createProgram()[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">&gt;&gt;createProgram</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/02/11 17:39:06</td>   <td>-8947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfPeriodWasCreated.createProgram()[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">&gt;&gt;createProgram</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>15/02/11 17:39:15</td>   <td>-329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfApplicantWasCreated.createProgram()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&gt;&gt;createProgram</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>15/02/11 17:39:23</td>   <td>7543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyIfApplicantWasCreated.createProgram()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&gt;&gt;createProgram</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="d4b5b8">  <td>15/02/11 17:38:52</td>   <td>-22898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfProgramWasCreated.deleteData()[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="d4b5b8">  <td>15/02/11 17:38:57</td>   <td>-17794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfProgramWasCreated.deleteData()[pri:0, instance:test.VerifyIfProgramWasCreated@5fb759d6]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/02/11 17:39:06</td>   <td>-8956</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfPeriodWasCreated.deleteData()[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/02/11 17:39:15</td>   <td>-379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfPeriodWasCreated.deleteData()[pri:0, instance:test.VerifyIfPeriodWasCreated@790da477]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>15/02/11 17:39:23</td>   <td>7445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfApplicantWasCreated.deleteData()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="78ef96">  <td>15/02/11 17:39:31</td>   <td>15508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfApplicantWasCreated.deleteData()[pri:0, instance:test.VerifyIfApplicantWasCreated@5e7cd6cc]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>15/02/11 17:39:36</td>   <td>20730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfStageWasCreated.deleteData()[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="956de9">  <td>15/02/11 17:39:41</td>   <td>25498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfStageWasCreated.deleteData()[pri:0, instance:test.VerifyIfStageWasCreated@4b8d604b]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>15/02/11 17:39:46</td>   <td>30839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfUserWasCreated.deleteData()[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="9c9176">  <td>15/02/11 17:39:51</td>   <td>35899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyIfUserWasCreated.deleteData()[pri:0, instance:test.VerifyIfUserWasCreated@57bc27f5]">&lt;&lt;deleteData</td> 
+<td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="6481f5">  <td>15/02/11 17:38:43</td>   <td>-31939</td> <td title="&gt;&gt;StartTest.init()[pri:0, instance:test.StartTest@480d3575]">&gt;&gt;init</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="6481f5">  <td>15/02/11 15:36:21</td>   <td>39509</td> <td title="&lt;&lt;StartTest.quit()[pri:0, instance:test.StartTest@480d3575]">&lt;&lt;quit</td> 
+<tr bgcolor="6481f5">  <td>15/02/11 17:39:51</td>   <td>36340</td> <td title="&lt;&lt;StartTest.quit()[pri:0, instance:test.StartTest@480d3575]">&lt;&lt;quit</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
 </table>
